@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-27T16:22:26Z",
+  "timestamp" : "2022-11-28T08:22:44Z",
   "count_outdated" : 2621,
   "uniques_outdated" : 707,
-  "count" : 2654,
+  "count" : 2653,
   "uniques" : 724,
   "clones" : [
     {
       "timestamp": "2022-11-14T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
