@@ -1,3 +1,11 @@
+2022-11-28T08:22:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3562966500 # 1069
+* notice: last 14d: unq all: 5 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 707 2621 / 724 2654
+* notice: next accum: outdated-unq outdated-all / unq all: 707 2621 / 724 2653
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-11-14]
+
 2022-11-27T16:22:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3559013930 # 1067
 * notice: last 14d: unq all: 5 33
